#2175 Fixed seeding not filling files table properly. Fixed route attributes not showing images.
Updated deployer script to the latest in preparation to release. Mapping environment now also starts using deployer.

--- a/resources/assets/css/routeattributes.css
+++ b/resources/assets/css/routeattributes.css
@@ -1,32 +1,32 @@
 /* Generated by http://responsive-css.spritegen.com Responsive CSS Sprite Generator */
 
-.route_attribute-death-skip, .route_attribute-invisibility-potion, .route_attribute-mage-slow-fall-skip, .route_attribute-rogue-shroud-skip, .route_attribute-warlock-gate-skip {
+.route_attribute_death_skip, .route_attribute_invisibility_potion, .route_attribute_mage_slow_fall_skip, .route_attribute_rogue_shroud_skip, .route_attribute_warlock_gate_skip {
     max-width: 100%;
     background-size: 100%;
     background-image: url('/images/routeattributes/routeattributes.png');
 }
 
-.route_attribute-death-skip {
+.route_attribute_death_skip {
     background-position: 0 0%;
     background-size: 100%;
 }
 
-.route_attribute-invisibility-potion {
+.route_attribute_invisibility_potion {
     background-position: 0 25%;
     background-size: 100%;
 }
 
-.route_attribute-mage-slow-fall-skip {
+.route_attribute_mage_slow_fall_skip {
     background-position: 0 50%;
     background-size: 100%;
 }
 
-.route_attribute-rogue-shroud-skip {
+.route_attribute_rogue_shroud_skip {
     background-position: 0 75%;
     background-size: 100%;
 }
 
-.route_attribute-warlock-gate-skip {
+.route_attribute_warlock_gate_skip {
     background-position: 0 100%;
     background-size: 100%;
 }
